--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
   position: relative;
 }
 .common-page-section-heading:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   width: 50px;
@@ -53,7 +53,6 @@
   background: #ffc107;
   left: 0;
   bottom: 0;
-  
 }
 
 .page-blog-section-heading {
@@ -61,7 +60,7 @@
   padding-bottom: 30px;
 }
 .page-blog-section-heading h2 {
-   font-size: 27px;
+  font-size: 27px;
   font-weight: 500;
   color: #2347a7;
   margin-bottom: 20px;
@@ -70,7 +69,7 @@
 }
 
 .page-blog-section-heading h2:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   width: 50px;
@@ -101,3 +100,45 @@
   height: 1000px; /* set height or add enough content to enable scrolling */
 }
 
+
+/*--------------------------------------------------------------
+# Staff Card design css
+--------------------------------------------------------------*/
+/* .Staff-card {
+  border: 2px solid #3f51b5;
+  border-radius: 6px;
+  padding: 13px 8px;
+} */
+
+.Staff-card .Staff-card-image {
+  width: 80px;
+  height: 80px;
+  max-height: 80px;
+  max-width: 80px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: 16px;
+}
+.Staff-heading {
+  color: #211f54;
+  font-size: 22px;
+  line-height: 26px;
+  font-weight: 700;
+  margin-bottom: 6px;
+  cursor: pointer;
+  transition: color 300ms ease;
+}
+.Staff-heading:hover {
+  color: #4a3aff;
+}
+.Staff-dc {
+  color: #4a3aff;
+  font-weight: 600;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 18px;
+}
+.Staff-email{
+  
+}
